# tree-sitter-sysy

./: Cargo.toml  README.md  grammar.js  package.json  tree-sitter.json
.github/workflows/: ci.yml
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: ambiguities.txt  comments.txt  declarations.txt  expressions.txt  functions.txt  statements.txt
