[package]
name = "tree-sitter-sysy"
description = "SysY grammar for tree-sitter"
version = "0.1.0"
authors = []
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "sysy"]
categories = ["parsing", "text-editors"]
repository = ""
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["LICENSE", "bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.4"
